# zerde

./: Cargo.toml  build.rs
data/: 1000_bms.csv  1000_gps.csv  1000_imu.csv  1000_motor.csv  1000_peripherals.csv  1000_shadow.csv  100_bms.csv  100_gps.csv  100_imu.csv  100_motor.csv  100_peripherals.csv  100_shadow.csv  10_bms.csv  10_gps.csv  10_imu.csv  10_motor.csv  10_peripherals.csv  10_shadow.csv  1_bms.csv  1_gps.csv  1_imu.csv  1_motor.csv  1_peripherals.csv  1_shadow.csv  README.md  analysis.py  analysis_sizes.csv  analysis_times.csv
src/: base.rs  compress.rs  main.rs  serialization.rs  simulator.rs  test.capnp  test.proto
src/serialization/: capnproto.rs  proto.rs
