[package]
name = "zerde"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
# Compression
async-compression = { version = "0.3", features = ["tokio", "zstd", "zlib"] }
lz4_flex = "0.9.3"
# Serialization
rmp-serde = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
prost-reflect = { version = "0.8", features = ["serde"] }
prost-reflect-build = "0.8"