[package]
name = "zerde"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
rand = "0.8"
flume = "0.10"
log = "0.4"
# Compression
async-compression = { version = "0.3", features = ["tokio", "zstd", "zlib"] }
lz4_flex = "0.9.3"
snap = "1"
# Serialization
apache-avro = "0.14"
bson = "2.4"
rmp-serde = "1.1.0"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "1.1"
prost-reflect = { version = "0.8", features = ["serde"] }
prost-reflect-build = "0.8"
prost = "0.10"
capnp = "0.14"

[build-dependencies]
prost-build = "0.10"
capnpc = "0.14"